1698: Updating converter logic
Issue: https://github.com/SecureApiGateway/SecureApiGateway/issues/1698